--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -2,3 +2,24 @@ module(
     name = "rules_mypy",
     repo_name = "com_alexmirrington_rules_mypy",
 )
+
+bazel_dep(name = "rules_proto_grpc", version = "5.1.0")
+bazel_dep(name = "rules_proto_grpc_python", version = "5.1.0")
+bazel_dep(name = "rules_python", version = "1.1.0")
+
+PYTHON_VERSION = "3.12"
+
+python = use_extension("@rules_python//python/extensions:python.bzl", "python")
+python.toolchain(
+    is_default = True,
+    python_version = PYTHON_VERSION,
+)
+
+pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
+pip.parse(
+    enable_implicit_namespace_pkgs = True,
+    hub_name = "rules_mypy_pip_deps_mypy_protobuf",
+    python_version = PYTHON_VERSION,
+    requirements_lock = "//:requirements_lock.txt",
+)
+use_repo(pip, "rules_mypy_pip_deps")
